<resources>
    <string name="app_name">Dhelp</string>
    <string name="textview">Disaster Help </string>
    <string name="drawerHeader">Drawer Header</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="splash">Disaster Help</string>
    <string name="home_page">Home Page</string>
    <string name="wt"><b><br>What is Covid-19?</br></b></string>
    <string name="what"><br>\tCoronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.\n\n</br>
        <br>\tMost people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.\n\n</br>
        <br>\tOlder people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.\n\n</br>
        <br>\tThe best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads.\n\n</br>
        <br>\tProtect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face.\n\n</br>
        <br>\tThe COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).\n\n</br>
        <br>\tAt this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments. WHO will continue to provide updated information as soon as clinical findings become available.\n\n</br>
    </string>
    <string name="wt1"><br><b>Stay informed:\n</b></br></string>
    <string name="wr"><br>\t1.Protect yourself:\n</br>
        <br>\t2.Advice for the public\n</br>
        <br>\t3.Myth busters\n</br>
        <br>\t4.Questions and answers\n</br>
        <br>\t5.Situation reports\n</br>
        <br>\t6.All information on the COVID-19 outbreak\n</br>
    </string>


    <string name="sym">Symptoms</string>
    <string name="prevention">Prevention</string>
    <string name="st1"><b>\nSYMPTOMS:\n</b></string>
    <string name="st2"><br>\tCOVID-19 affects different people in different ways.Most infected people will develop mild to moderate illness and recover without hospitalization.\n</br>
    </string>
    <string name="st3"><br><b>MOST COMMON SYMPTOMS:\n</b></br>  </string>
    <string name="st4"><br>\t1.Fever\n</br>
        <br>\t2.Dry cough\n</br>
        <br>\t3.Tiredness\n</br> </string>
    <string name="st5"><b><br>LESS COMMON SYMPTOMS:\n</br></b>  </string>
    <string name="st6"><br>\t1.Aches and pains\n</br>
        <br>\t2.Sore throat\n</br>
        <br>\t3.Diarrhoea\n</br>
        <br>\t4.Conjunctivitis\n</br>
        <br>\t5.Headache\n</br>
        <br>\t6.Loss of taste or smell\n</br>
        <br>\t7.A rash on skin, or discolouration of fingers or toes\n</br>  </string>
    <string name="st7"><br><b>SERIOUS SYMPTOMS:\n</b></br> </string>
    <string name="st8"> <br>\t1.Difficulty breathing or shortness of breath\n</br>
        <br>\t2.Chest pain or pressure\n</br>
        <br>\t3.Loss of speech or movement\n\n</br>
        <br>\tSeek immediate medical attention if you have serious symptoms. Always call before visiting your doctor or health facility.\n\n</br>
        <br>\tPeople with mild symptoms who are otherwise healthy should manage their symptoms at home.\n\n</br>
        <br>\tOn average it takes 5–6 days from when someone is infected with the virus for symptoms to show, however it can take up to 14 days.\n\n</br>  </string>


    <string name="todo2">TODO</string>
    <string name="todo6">TODO</string>
    <string name="b">TODO</string>
    <string name="ic_home">Home</string>
    <string name="ic_what">What</string>
    <string name="ic_prevention">Prevention</string>
    <string name="ic_symptoms">Symptoms</string>
    <string name="ic_toll_free">Toll-Free</string>
    <string name="ic_about">About</string>
    <string name="todo">TODO</string>
    <string name="at"><br><b>About DHelp\n\n</b></br></string>
    <string name="aboutt"> <br>\tTo help the people to fight against Novel CoronaVirus (Covid 19). This Application contains few tips for prevention and suggestion to survive from CoronaVirus.\n</br> </string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create your\n\t account</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail</string>
    <string name="register_login">Register</string>
    <string name="login_ed">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password_lg">Password</string>
    <string name="welcome">Welcome</string>
    <string name="username_lg">E-Mail Address</string>
    <string name="dobs">dd/mm/yyyy</string>
    <string name="dobt">Date of Birth</string>
    <string name="logout">Logout</string>
    <string name="edit">edit</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">submit</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="appl">Your request has been applied!</string>
    <string name="appl1">Soon we will notify you</string>


</resources>
