<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    Profile    "
            android:textColor="@color/bg"
            android:layout_gravity="center"
            android:background="@drawable/btn_bg"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="25sp"/>

        <RelativeLayout
            android:layout_width="220sp"
            android:layout_height="225sp"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:background="@drawable/pic">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/profilepics" />

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressbar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="50sp"
            android:layout_marginStart="30sp" />

        <EditText

            android:id="@+id/fn"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginStart="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_address"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            />

        <EditText
            android:id="@+id/mailb"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:drawablePadding="10dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginStart="30sp" />

        <EditText
            android:id="@+id/pn"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:drawablePadding="10dp"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:text="@string/dobt"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:drawablePadding="10dp"
            android:hint="@string/dobs"
            android:inputType="date"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"/>

        <EditText
            android:id="@+id/age"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="310dp"
            android:layout_height="120dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:drawablePadding="10dp"
            android:inputType="textLongMessage"
            android:padding="20dp"
            android:textColor="@android:color/white" />



        <Button
            android:id="@+id/editb"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/edit"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textColor="@color/bg"
            android:background="@drawable/btn_bg"
            />

        <Button
            android:id="@+id/logout"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="50sp"
            android:textColor="@color/bg"
            android:background="@drawable/btn_bg"
            />



    </LinearLayout>

</ScrollView>