<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/a1"
        />

    <com.codesgood.views.JustifiedTextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/at"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.codesgood.views.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutt"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />
</LinearLayout>