<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/sym">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/what1"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"/>

            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/wt"/>

            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:textStyle="normal"
                android:typeface="sans"
                android:textSize="20dp"
                android:textColor="@android:color/white"/>

            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/wt1"/>

            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wr"
                android:textStyle="normal"
                android:typeface="sans"
                android:textSize="20dp"
                android:textColor="@android:color/white"/>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>
