<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="30dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/person"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editt"
            android:padding="20dp"
            android:autofillHints="" tools:targetApi="o"
            android:drawableStart="@drawable/person" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/mail"
            android:textColor="@android:color/white"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/editt"
            android:padding="20dp"
            android:drawableStart="@drawable/mail"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/cpasswd"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editt"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/signup"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/bg"
            android:background="@drawable/btn_bg"
            />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="cancel"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/holo_red_dark"
            android:background="@drawable/btn_bg"
            />

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>